src/styles/main.css
:root {
  --border: 2px solid #000;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  font-family: Verdana, Arial, Helvetica, sans-serif;
  text-align: center;
  font-size: 16px;
}

main {
  margin: 1rem 0.5rem;
  display: flex;
  flex-direction: column;
}

header {
  padding: 0.5rem;
  background-color: #dcefe6;
  text-align: left;
  border: var(--border);
  border-left: none;
  border-right: none;
}

h1 {
  font-size: 1.25rem;
}

.main-grid {
  display: grid;
  grid-template-areas:
    "top"
    "left"
    "right";
  justify-content: center;
  gap: 4px;
}

@media screen and (min-width: 768px) {
  .main-grid {
    grid-template-columns: 5fr 1fr;
    grid-template-rows: auto 1fr;
    grid-template-areas:
      "top top"
      "left right";
  }
}

@media screen and (min-width: 1200px) {
  .main-grid {
    max-width: 75vw;
    min-height: 75vh;
    margin: 0 auto;
  }
}

.canvas-mapper {
  grid-area: left;
}

.canvas-wrapper {
  display: block;
  margin: auto;
  height: 100%;
  min-height: 400px;
}

#workspace {
  border: var(--border);
  display: block;
  width: 100%;
  min-height: 300px;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-left: 0;
  padding-right: 0;
}

#importFile {
  display: none;
}

/**********
 * Button
 **********/

button {
  border: var(--border);
  padding: 0.5rem;
  font-size: 1rem;
}

button:focus {
  outline-offset: 3px;
}

button:hover {
  text-decoration: underline;
}

button:active {
  background-color: #3e6659;
  color: #fff;
}

/***********
 *  Import / Export Options
 ***********/

#importExportOptions {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 4px;
  margin: 0.5rem 0;
}

@media screen and (min-width: 500px) {
  #importExportOptions {
    flex-direction: row;
  }
}

/***********
 *  Toolbar
 ***********/
.tools {
  grid-area: top;
  display: flex;
  flex-direction: column;
  align-items: start;
  row-gap: 1rem;
  margin: 0 0 0.5rem 0;
}

.toolbar .btn {
  width: 44px;
  height: 44px;
  background-size: cover;
}

#selectBtn.active {
  background-image: url(../assets/images/cursor_active.svg);
}

#selectBtn {
  background-image: url(../assets/images/cursor.svg);
}

#stationBtn.active {
  background-image: url(../assets/images/station_active.svg);
}

#stationBtn {
  background-image: url(../assets/images/station.svg);
}

#connectionBtn.active {
  background-image: url(../assets/images/connection_active.svg);
}

#connectionBtn {
  background-image: url(../assets/images/connection.svg);
}

#deleteBtn {
  background-image: url(../assets/images/delete.svg);
}

#deleteBtn:active {
  background-image: url(../assets/images/delete_active.svg);
}

#undoBtn {
  background-image: url(../assets/images/undo.svg);
}

#undoBtn:active {
  background-image: url(../assets/images/undo_active.svg);
}

#redoBtn {
  background-image: url(../assets/images/redo.svg);
}

#redoBtn:active {
  background-image: url(../assets/images/redo_active.svg);
}

/**********
 * Properties Editor
 **********/

#properties {
  grid-area: right;
  border: var(--border);
  font-size: 0.875rem;
  min-height: 100px;
  min-width: 240px;
  text-align: left;
}

#properties h2 {
  font-size: 0.875rem;
  font-weight: 600;
  padding: 0.5rem 1rem;
  background-color: #dcefe6;
  border-bottom: var(--border);
}

#propdiv {
  padding: 0.5rem 1rem;
}

.input-group {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0.5rem 0;
  gap: 0.25rem;
}

input[type="text"],
input[type="number"] {
  border: var(--border);
  min-height: 1.875rem;
  padding: 4px;
  font-size: 1rem;
  max-width: 100%;
}

